--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="favicon" type="image/ico" href="favicon.ico" />
   <title>The Pyramid Challenge</title>
   <script src="vendor/howler/howler.min.js"></script>
   <script src="main.js"></script>
